# occupational_health_toolkits

./: .gitignore  Agent.md  LICENSE  MANIFEST.in  README.md  code_review_report.md  package_analysis.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  nihl_queue_analysis.py
examples/chinese_worker_experiment/: README.md  config.yaml  run_experiment.py  run_experiment_new.py  step1_load_data2staffinfo.py  test_data_processing.py  test_first_rows.py  test_quick_fix.py  test_single_row.py
ohtk/: __init__.py
ohtk/algorithms/: __init__.py
ohtk/algorithms/analysis/: __init__.py  nonlinear_analysis.py  threshold_analysis.py
ohtk/algorithms/fitting/: __init__.py  hearing_loss_functions.py  noise_functions.py
ohtk/algorithms/mining/: __init__.py  association_mining.py
ohtk/constants/: __init__.py  auditory_constants.py  global_constants.py  industry_constants.py
ohtk/detection_info/: __init__.py  base_result.py  curve_result.py  point_result.py
ohtk/detection_info/auditory_detection/: ABR_result.py  PTA_result.py  __init__.py
ohtk/diagnose_info/: __init__.py  auditory_diagnose.py
ohtk/diagnose_info/nihl_predictor/: __init__.py  base.py  calculators.py  factory.py
ohtk/diagnose_info/nipts_predictor/: __init__.py  base.py  dl_predictors.py  factory.py  iso_predictors.py  ml_predictors.py
ohtk/experiments/: __init__.py  base_experiment.py  config.py  feature_builder.py  model_trainer.py
ohtk/hazard_info/: __init__.py  base_hazard.py  noise_hazard.py
ohtk/model/: README.md  __init__.py  train_model.py
ohtk/model/conv_layer/: cnn.py
ohtk/model/data_mining/: __init__.py  association_mining.py
ohtk/model/fit_function/: LAeq_functions.py  NIL_functions.py  __init__.py
ohtk/model/linear_regression/: custom_linear_regression.py
ohtk/model/multi_task/: cnn_mmoe.py  esmm.py  mmoe.py  model_train.py
ohtk/modeling/: __init__.py
ohtk/modeling/boosting/: __init__.py  lgbm_model.py
ohtk/modeling/conv/: __init__.py  cnn.py
ohtk/modeling/custom/: __init__.py  linear_regression.py
ohtk/modeling/multi_task/: __init__.py  cnn_mmoe.py  esmm.py  mmoe.py
ohtk/staff_info/: __init__.py  auditory_health_info.py  staff_basic_info.py  staff_health_info.py  staff_info.py  staff_occhaz_info.py
ohtk/training/: __init__.py  multi_task_trainer.py  train_model.py
ohtk/utils/: __init__.py  data_helper.py  database_helper.py  decorators.py  plot_helper.py  pta_correction.py  queue_data.py
test/: test_pta_res.py  test_staff_info.py
tests/: __init__.py  test_chinacdc_compatibility.py  test_comprehensive.py  test_extrapolation.py  test_nipts_direct.py  test_nipts_manual.py  test_nipts_predict.py  test_nipts_simple.py  test_pta_res.py  test_runner.py  test_staff_info.py  test_validation.py
(+6 files in other folders)
